<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        // Email
        <EditText
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:hint="Enter your email"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        // Password
        <EditText
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:hint="Enter your password"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        // Login Button
        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonRegister"
            android:text="Register User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        // Already registered user
        <TextView
            android:textAlignment="center"
            android:text="Already Registered? Sign in here."
            android:id="@+id/textViewSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>