<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:textAlignment="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/labora1" />

    <!--<TextView-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:text="Continue Registration"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Display1"-->
        <!--android:textColorLink="@color/colorPrimary"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/linearLayout3"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintVertical_bias="0.731" />-->

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572">

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Enter your Full Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Enter your Phone Number"
            android:inputType="phone" />

        <!--<EditText-->
            <!--android:id="@+id/editTextOccupancy"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="15dp"-->
            <!--android:hint="Enter your Occupancy"-->
            <!--android:inputType="text" />-->

        <!--<EditText-->
            <!--android:id="@+id/editTextPostalAddress"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="15dp"-->
            <!--android:hint="Enter your Address"-->
            <!--android:inputType="textPostalAddress" />-->


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Finish Registration" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
